# ERNIE-MCP-Deepsearch-demo

./: .env  .env.example  .gitignore  README.md  base_agent.py  client.py  config.json  main.py  mcp_agent.py  prompt.py  pyproject.toml  requirements.txt  run.sh
